@@ -7,6 +7,15 @@
 %%% TODO:
       %% \item New \code{rDatetime()} for random date/time sequences
       %% within a specified time range.
+\section{CHANGES in sfsmisc VERSION 1.1-18 [2024-02-23]}{
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item  \code{polyn.eval(7, x)} no longer always returns \code{7}, but
+      rather a vector of the same length as \code{x}.
+    }
+  }
+}
+
 \section{CHANGES in sfsmisc VERSION 1.1-17 [2024-02-01]}{
   \subsection{Misc}{
     \itemize{
